1.6.0
-----
* removes constraint to use `button` as @link() argument
* drop official support for Django < 3.x


1.5.8
-----
* add common css class
* fixes permissions check


1.5.7
-----
* BUG FIX: fixes check() implementation
* Allow any HttpResponse as return value


1.5.6
-----
* pass request when basic_auth authenticate


1.5.5
-----
* minor refactoring of get_urls()


1.5.4
-----
* allow overwrite visible inside handler


1.5.3
-----
* bug fixing
* add ability to customise view authentication handler


1.5.2
-----
* bug fixing


1.5.1
-----
* bug fixing


1.5
-----
* pass `handler` to permission callable


1.4.2
-----
* catch OSError when checking decorator


1.4
-----
* add support for @decorators


1.3.1
-----
* uses __str__ instead of __repr__ (DjangoDebugToolbar issue)


1.3
---
* new @choice() decorator
* bug fixes


1.2
---
* bug fixes


1.1.0
-----
* add `visible` and `enabled` attributes


1.0.0
-----
* refactor javascript
* add HTTP Basi Auth support


0.1.0
-----
* Initial Release