@@ -7,3 +7,5 @@ tag = False
 allow_dirty = True
 
 [bumpversion:file:src/admin_extra_buttons/__init__.py]
+
+[bumpversion:file:pyproject.toml]
