@@ -1,0 +1,27 @@
+[pytest]
+norecursedirs = data .tox _plugin_template .idea  node_modules ~*
+log_format = %(asctime)s %(levelname)s %(message)s
+log_level = CRITICAL
+django_find_project = false
+log_cli = False
+log_date_format = %Y-%m-%d %H:%M:%S
+junit_family=xunit1
+pythonpath=src
+testpaths=tests
+tmp_path_retention_policy=all
+tmp_path_retention_count=0
+addopts =
+        -rs
+        --tb=short
+        --capture=sys
+        --echo-version django
+        --cov-config=tests/.coveragerc
+        --cov-report html
+        --cov-report xml:coverage.xml
+
+
+markers =
+    admin
+    eager
+
+python_files=test_*.py
