@@ -1,40 +1,42 @@
 [tox]
 envlist = d{42,51}-py{311,312}
-
-[pytest]
-pythonpath=./tests/demoapp/
-django_find_project = false
-DJANGO_SETTINGS_MODULE=demo.settings
-norecursedirs = .tox docs ./tests/demoapp/
-python_files=tests/test_*.py
-addopts =
-        -v
-        --cov=admin_extra_buttons
-        --cov-report=html
-        --cov-config=./tests/.coveragerc
-        --reuse-db
-        --tb=short
-        --capture=no
-        --echo-version django
-
-markers =
-  functional: mark a test as functional
+skip_missing_interpreters = true
+;skipsdist = true
 
 [testenv]
+;install_command=pip install {opts} {packages}
+passenv =
+    PYTHONDONTWRITEBYTECODE
+    PGHOST
+    PGPORT
 
+allowlist_externals =
+    sh
+
+changedir={toxinidir}
 setenv =
-    PYTHONDONTWRITEBYTECODE=true
-    DISPLAY=:0.0
+    d42: DJANGO = django>=4,<5
+    d51: DJANGO = django>=5,<6
+    d42: LOCK = "uv4.lock"
+    d51: LOCK = "uv5.lock"
 
-extras = test
-deps=
-    d32: django==3.2.*
-    d42: django==4.0.*
-    d50: django==5.0.*
-    dev: git+git://github.com/django/django.git#egg=django
+deps =
+    uv
 
 commands =
-    py.test tests --create-db {posargs}
+    sh -c "echo '{env:DJANGO}' > {work_dir}/overrides.txt"
+    uv export -q --no-hashes  -o {work_dir}/requirements.txt
+    uv pip install -r {work_dir}/requirements.txt --override {work_dir}/overrides.txt
+    pytest tests
+
+
+[testenv:lint]
+envdir={toxworkdir}/d42-py312/
+skip_install = true
+commands =
+    pip install flake8 isort
+    flake8 src tests
+    isort -c src tests
 
 
 [testenv:package]
@@ -50,11 +52,3 @@ commands =
     python -c "import shutil; shutil.rmtree('dist', ignore_errors=True)"
     python -m build
     python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/*
-
-
-[testenv:docs]
-extras=
-    docs
-
-commands =
-    mkdocs build
